Patient-db: adapt cherry-picked test to java 11